[package]
name = "gc_rs"
version = "0.1.0"
authors = ["Evan Williams <evanawilliams@live.com>"]
repository = "https://github.com/evan-a-w/gc_rs"
edition = "2021"

[lib]
name = "gc_rs"
path = "src/lib.rs"

[[bin]]
name = "gc_rs_bin"
path = "src/bin.rs"

[features]
derive = ["gc_rs_derive"]

[dependencies]
gc_rs_derive = { path = "../gc_rs_derive", optional = true}

[dev-dependencies]
gc_rs_derive = { path = "../gc_rs_derive" }

[build-dependencies]
gc_rs_derive = { path = "../gc_rs_derive" }
